--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -21,6 +21,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="h36-LD-jGa">
                                 <rect key="frame" x="0.0" y="64" width="320" height="372"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5gf-rf-Jce" userLabel="BottomToolbar">
                                 <rect key="frame" x="0.0" y="436" width="320" height="44"/>
@@ -72,7 +73,7 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="CCR-5l-cGu"/>
-                                    <barButtonItem title="Cancel" id="QSp-f0-rnS">
+                                    <barButtonItem systemItem="cancel" id="QSp-f0-rnS">
                                         <connections>
                                             <action selector="cancel:" destination="vXZ-lx-hvc" id="RhV-bx-9OG"/>
                                         </connections>
@@ -159,9 +160,11 @@
                         <outlet property="topTextTopConstraint" destination="XUP-8F-jaI" id="rLZ-74-Pfj"/>
                         <outlet property="topToolbar" destination="BSa-Nz-ByP" id="RR2-pE-Sws"/>
                         <outlet property="topToolbarTopConstraint" destination="nLY-7r-2vD" id="eZ2-Sb-zJR"/>
+                        <segue destination="Dee-Av-7FS" kind="unwind" identifier="didFinishEditingMemeSeque" unwindAction="didFinishEditing:" id="qZT-dy-2fi"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <exit id="Dee-Av-7FS" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2534" y="1730"/>
         </scene>
@@ -186,7 +189,7 @@
                     <navigationItem key="navigationItem" id="LA2-Yk-h8Q">
                         <barButtonItem key="rightBarButtonItem" systemItem="edit" id="bW0-hU-NXA">
                             <connections>
-                                <segue destination="vXZ-lx-hvc" kind="presentation" identifier="editSelectedMemeSegue" id="020-5C-Xwf"/>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" identifier="editMemeSegue" id="020-5C-Xwf"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -207,6 +210,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" indentationWidth="10" reuseIdentifier="MemeCell" id="NTP-sa-MS3" customClass="MemeTableViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="320" height="90"/>
@@ -297,7 +301,7 @@ That can be two lines</string>
                     <navigationItem key="navigationItem" title="Sent Memes" id="n4X-pc-jrV">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="GJ2-gC-g7y">
                             <connections>
-                                <segue destination="vXZ-lx-hvc" kind="presentation" identifier="PresentMemeEditor" id="Hyn-En-pyj"/>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" identifier="CreateMemeSegue" id="Hyn-En-pyj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -394,7 +398,7 @@ That can be two lines</string>
                     <navigationItem key="navigationItem" title="Sent Memes" id="8Sf-bd-L32">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="04n-9r-guz">
                             <connections>
-                                <segue destination="vXZ-lx-hvc" kind="presentation" id="mG6-eX-t3k"/>
+                                <segue destination="vXZ-lx-hvc" kind="presentation" identifier="editMemeSegue" id="mG6-eX-t3k"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -451,7 +455,7 @@ That can be two lines</string>
         <image name="table" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fXO-ST-gG4"/>
         <segue reference="020-5C-Xwf"/>
+        <segue reference="Iy4-ZQ-zzL"/>
     </inferredMetricsTieBreakers>
 </document>
